; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_hub.c_usb_kick_khubd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_hub.c_usb_kick_khubd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }
%struct.usb_hub = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usb_kick_khubd(%struct.usb_device* %0) #0 {
  %2 = alloca %struct.usb_device*, align 8
  %3 = alloca %struct.usb_hub*, align 8
  store %struct.usb_device* %0, %struct.usb_device** %2, align 8
  %4 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %5 = call %struct.usb_hub* @hdev_to_hub(%struct.usb_device* %4)
  store %struct.usb_hub* %5, %struct.usb_hub** %3, align 8
  %6 = load %struct.usb_hub*, %struct.usb_hub** %3, align 8
  %7 = icmp ne %struct.usb_hub* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.usb_hub*, %struct.usb_hub** %3, align 8
  %10 = call i32 @kick_khubd(%struct.usb_hub* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local %struct.usb_hub* @hdev_to_hub(%struct.usb_device*) #1

declare dso_local i32 @kick_khubd(%struct.usb_hub*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
